--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -8,13 +8,14 @@ body{
   font-weight: 800;
 }
 
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
-}
 
 .para {
   font-size: 22px;
+}
+
+.para.small-para {
+  font-size: 14px;
+  font-weight: 800;
 }
 
 .confirm {
@@ -29,7 +30,12 @@ body{
   font-size: 20px;
 }
 
-.child {
+.button.confirm {
+  color: white;
+  background-color: green;
+}
+
+.text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
